nav bar misalignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2114,9 +2114,9 @@ button,
   }
   #header > * {
     -moz-flex: 1;
-    -webkit-flex: 1;
+    /* -webkit-flex: 1; */
     -ms-flex: 1;
-    flex: 1;
+    /* flex: 1; */
     margin-bottom: 0; }
   #header .logo {
     border-bottom: 0;
